--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="https://tamuk-tuition-calculator-webcomponent.netlify.app/"></script>
+    <script src="https://tamuk-tuition-calculator-webcomponent.netlify.app/tuition-calculator.js"></script>
 <tuition-calculator></tuition-calculator>
 
 </body>
