--- a/test.html
+++ b/test.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="https://tamuk-tuition-calculator-webcomponent.netlify.app/tuition-calculator-web-component.css"> -->
+    <link rel="stylesheet" href="dist/tuition-calculator-web-component.css">
 </head>
 <body>
-    <script src="https://tamuk-tuition-calculator-webcomponent.netlify.app/tuition-calculator.js"></script>
+    <!-- <script src="https://tamuk-tuition-calculator-webcomponent.netlify.app/tuition-calculator.js"></script>
+<tuition-calculator></tuition-calculator> -->
+    <script src="dist/tuition-calculator.js"></script>
 <tuition-calculator></tuition-calculator>
+
 
 </body>
 </html>
